--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+
     <link rel="stylesheet" href="./assets/scss/bootstrap.css" />
   </head>
 
-  <body>
+  <body class="bg-dark">
     <div class="container-fluid">
       <div class="row">
-        <nav class="col-md-2 d-none d-md-block sidebar">
+        <nav class="col-3 d-none d-md-block sidebar bg-black">
           <div class="sidebar-sticky">
             <div class="sidebar-header">
               <ul class="nav flex-column">
@@ -22,54 +27,113 @@
                 </li>
               </ul>
             </div>
-            <!--Row interna nav-->
-            <div class="row">
+            <!--Row interna nav------------------------------------>
+            <div class="row row-cols-1">
               <div class="col">
                 <ul class="nav flex-column">
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">
-                      <i class="fas fa-home"></i>
+                    <a class="nav-link active text-light" href="#">
+                      <i class="bi bi-three-dots"></i>
+                    </a>
+                  </li>
+
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link active link-light" href="#"
+                      ><i class="bi bi-house-door-fill text-light me-1"></i>
                       Home
                     </a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">
-                      <i class="fas fa-search"></i>
-                      Search
-                    </a>
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link link-light" href="#"
+                      ><i class="bi bi-search text-light me-1"></i> Cerca</a
+                    >
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">
-                      <i class="fas fa-book"></i>
-                      Your Library
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link link-light" href="#">
+                      <i class="bi bi-collection-play link-light me-1"></i> La
+                      tua libreria
                     </a>
                   </li>
                 </ul>
               </div>
               <!--col-2--------------------------------------------------->
               <div class="col">
-                <ul class="nav flex-column">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">
-                      <i class="fas fa-plus"></i>
-                      Create Playlist
+                <ul class="nav flex-column border-bottom border-dark">
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link text-light" href="#"
+                      ><i class="bi bi-plus-square-fill text-light me-1"></i>
+                      crea Playlist
                     </a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">
-                      <i class="fas fa-heart"></i>
-                      Liked Songs
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link text-light" href="#">
+                      <i class="bi bi-suit-heart-fill text-light me-1"></i>
+                      Brani che ti piacciono
+                    </a>
+                  </li>
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link text-light" href="#"
+                      ><i class="bi bi-bookmark-fill text-light me-1"></i> I
+                      tuoi episodi
                     </a>
                   </li>
                 </ul>
               </div>
               <!--col-3------------------------------------------>
-              <div class="col"></div>
+              <div class="col">
+                <p></p>
+              </div>
             </div>
           </div>
         </nav>
-        <main class="col"></main>
-        <aside class="col"></aside>
+        <main class="col-7"></main>
+
+        <aside class="col-2 bg-black">
+          <div id="side">
+            <div id="friends">
+              <div><h5>Attività amici</h5></div>
+              <div>
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M12.5 16C14.433 16 16 14.433 16 12.5C16 10.567 14.433 9 12.5 9C10.567 9 9 10.567 9 12.5C9 14.433 10.567 16 12.5 16ZM13 11V12H14C14.2761 12 14.5 12.2239 14.5 12.5C14.5 12.7761 14.2761 13 14 13H13V14C13 14.2761 12.7761 14.5 12.5 14.5C12.2239 14.5 12 14.2761 12 14V13H11C10.7239 13 10.5 12.7761 10.5 12.5C10.5 12.2239 10.7239 12 11 12H12V11C12 10.7239 12.2239 10.5 12.5 10.5C12.7761 10.5 13 10.7239 13 11Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M11 5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5C5 3.34315 6.34315 2 8 2C9.65685 2 11 3.34315 11 5Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M2 13C2 14 3 14 3 14H8.25606C8.09023 13.5308 8 13.026 8 12.5C8 11.1463 8.5977 9.93228 9.54358 9.10733C9.07708 9.03817 8.56399 9 8 9C3 9 2 12 2 13Z"
+                    fill="white"
+                  />
+                </svg>
+                <i class="bi bi-x text-light fs-2"></i>
+              </div>
+            </div>
+
+            <div>
+              <div class="card-side">
+                <div>
+                  <img src="" alt="" />
+                </div>
+                <div>
+                  <h6></h6>
+                  <p></p>
+                  <p></p>
+                </div>
+                <div>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </aside>
       </div>
     </div>
 
