--- a/index.html
+++ b/index.html
@@ -1,180 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="./assets/scss/bootstrap.css" />
+    <link rel="stylesheet" href="./assets/scss/my-style/personal-style.css" />
+  </head>
 
-  <link rel="stylesheet" href="./assets/scss/bootstrap.css" />
-  <link rel="stylesheet" href="./assets/scss/my-style/personal-style.css">
-</head>
-
-<body class="bg-dark">
-  <div class="container-fluid">
-    <div class="row">
-      <nav class="col-3 d-none d-md-block sidebar bg-black">
-        <div class="sidebar-sticky">
-          <div class="sidebar-header">
-            <ul class="nav flex-column">
-              <li class="nav-item"></li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fas fa-ellipsis-h"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <!--Row interna nav------------------------------------>
-          <div class="row row-cols-1">
-            <div class="col mb-3">
+  <body class="personal-bg">
+    <div class="container-fluid">
+      <div class="row">
+        <nav class="col-3 d-none d-md-block sidebar bg-black">
+          <div class="sticky-bottom">
+            <div class="sidebar-header">
               <ul class="nav flex-column">
+                <li class="nav-item"></li>
                 <li class="nav-item">
-                  <a class="nav-link active text-light fw-medium" href="#">
-                    <i class="bi bi-three-dots"></i>
-                  </a>
-                </li>
-
-                <li class="nav-item d-flex align-items-center">
-                  <a class="nav-link active link-light fw-medium" href="#"><i
-                      class="bi bi-house-door-fill text-light me-1"></i>
-                    Home
-                  </a>
-                </li>
-                <li class="nav-item d-flex align-items-center">
-                  <a class="nav-link text-white-50 fw-medium" href="#"><i class="bi bi-search text-white-50 me-1"></i>
-                    Cerca</a>
-                </li>
-                <li class="nav-item d-flex align-items-center">
-                  <a class="nav-link text-white-50 fw-medium" href="#">
-                    <i class="bi bi-collection-play text-white-50 me-1"></i> La
-                    tua libreria
+                  <a class="nav-link" href="#">
+                    <i class="fas fa-ellipsis-h"></i>
                   </a>
                 </li>
               </ul>
             </div>
-            <!--col-2--------------------------------------------------->
-            <div class="col">
-              <ul class="nav flex-column border-bottom border-dark">
-                <li class="nav-item d-flex align-items-center">
-                  <a class="nav-link text-white-50 fw-medium" href="#"><i
-                      class="bi bi-plus-square-fill text-white-50 me-1"></i>
-                    Crea Playlist
-                  </a>
-                </li>
-                <li class="nav-item d-flex align-items-center">
-                  <a class="nav-link text-white-50 fw-medium" href="#">
-                    <i
-                      class="bi bi-suit-heart-fill text-white-50 text-center    rounded-1    px-1  py-1   favourite-song-bg "></i>
-                    Brani che ti piacciono
-                  </a>
-                </li>
-                <li class="nav-item d-flex align-items-center mb-3">
-                  <a class="nav-link text-white-50 fw-medium" href="#"><i
-                      class="bi bi-bookmark-fill text-white-50 me-1 your-episode px-1  py-1"></i> I
-                    tuoi episodi
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <!--col-3------------------------------------------>
-            <div class="col">
-              <div class="text-white-50 p-3">
-                <p>early stage emily syndrome (sett-ott 2022)</p>
-                <p>Be The Young</p>
-                <p>.." cit. Kimiko (lug-ago 2022)</p>
-                <p>saggio vibes</p>
-                <p>main character energy (mag-giu 2022)</p>
-                <p>that fucking mood</p>
-                <p>VEE, CARLOTTA E GIACOMO VANNO A BOSIO</p>
-                <p>
-                  An Emily Winchester kind of mood landing page (mar-apr 2022)
-                </p>
-                <p>2021 lol</p>
-                <p>cosa cazzo uol dire questa affermazione (gen-fe...</p>
-                <p>honey and glass (nov-dic 2021)</p>
-                <p>(Revenge) Training Arc M</p>
-                <p>Lidia</p>
-                <p>Emily</p>
-                <p>minecraft e nintendo switch (sep-oct 2021)</p>
-                <p>silvano d'orba? | hardly know her (lug - ago 2021)</p>
-                <p>Culo 2021</p>
-                <p>Frah Quintale Mix</p>
-                <p>Francesco Guccini Mix</p>
+            <!--Row interna nav------------------------------------>
+            <div class="row row-cols-1">
+              <div class="col mb-3">
+                <ul class="nav flex-column">
+                  <li class="nav-item">
+                    <a class="nav-link active text-light fw-medium" href="#">
+                      <i class="bi bi-three-dots"></i>
+                    </a>
+                  </li>
+
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link active link-light fw-medium" href="#"
+                      ><i class="bi bi-house-door-fill text-light me-1"></i>
+                      Home
+                    </a>
+                  </li>
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link text-white-50 fw-medium" href="#"
+                      ><i class="bi bi-search text-white-50 me-1"></i> Cerca</a
+                    >
+                  </li>
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link text-white-50 fw-medium" href="#">
+                      <i class="bi bi-collection-play text-white-50 me-1"></i>
+                      La tua libreria
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!--col-2--------------------------------------------------->
+              <div class="col">
+                <ul class="nav flex-column border-bottom border-dark">
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link text-white-50 fw-medium" href="#"
+                      ><i class="bi bi-plus-square-fill text-white-50 me-1"></i>
+                      Crea Playlist
+                    </a>
+                  </li>
+                  <li class="nav-item d-flex align-items-center">
+                    <a class="nav-link text-white-50 fw-medium" href="#">
+                      <i
+                        class="bi bi-suit-heart-fill text-white-50 text-center rounded-1 px-1 py-1 favourite-song-bg"
+                      ></i>
+                      Brani che ti piacciono
+                    </a>
+                  </li>
+                  <li class="nav-item d-flex align-items-center mb-3">
+                    <a class="nav-link text-white-50 fw-medium" href="#"
+                      ><i
+                        class="bi bi-bookmark-fill text-white-50 me-1 your-episode px-1 py-1"
+                      ></i>
+                      I tuoi episodi
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <!--col-3------------------------------------------>
+              <div class="col">
+                <div class="text-white-50 p-3">
+                  <p>early stage emily syndrome (sett-ott 2022)</p>
+                  <p>Be The Young</p>
+                  <p>.." cit. Kimiko (lug-ago 2022)</p>
+                  <p>saggio vibes</p>
+                  <p>main character energy (mag-giu 2022)</p>
+                  <p>that fucking mood</p>
+                  <p>VEE, CARLOTTA E GIACOMO VANNO A BOSIO</p>
+                  <p>
+                    An Emily Winchester kind of mood landing page (mar-apr 2022)
+                  </p>
+                  <p>2021 lol</p>
+                  <p>cosa cazzo uol dire questa affermazione (gen-fe...</p>
+                  <p>honey and glass (nov-dic 2021)</p>
+                  <p>(Revenge) Training Arc M</p>
+                  <p>Lidia</p>
+                  <p>Emily</p>
+                  <p>minecraft e nintendo switch (sep-oct 2021)</p>
+                  <p>silvano d'orba? | hardly know her (lug - ago 2021)</p>
+                  <p>Culo 2021</p>
+                  <p>Frah Quintale Mix</p>
+                  <p>Francesco Guccini Mix</p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </nav>
-      <main class="col-7"></main>
+        </nav>
+        <main class="col-7"></main>
 
-      <aside class="col-2 bg-black">
-        <div id="side" class="mt-3">
-          <div class="d-flex justify-content-between align-items-center" id="friends">
-            <div>
-              <h5 class="text-light mt-2">Attività amici</h5>
+        <aside class="col-2 bg-black">
+          <div id="side" class="mt-3">
+            <div
+              class="d-flex justify-content-between align-items-center"
+              id="friends"
+            >
+              <div>
+                <h5 class="text-light mt-2">Attività amici</h5>
+              </div>
+              <div>
+                <i class="bi bi-person-add fs-5 text-white-50"></i>
+                <i class="bi bi-x fs-4 text-white-50"></i>
+              </div>
             </div>
-            <div>
-              <i class="bi bi-person-add fs-5 text-white-50"></i>
-              <i class="bi bi-x fs-4 text-white-50"></i>
+
+            <div class="mt-3">
+              <div
+                class="card-side d-flex justify-content-between text-white-50"
+              >
+                <div class="w-25">
+                  <img
+                    class="w-75 rounded-5"
+                    src="./Assets_esercizio/imgs/main/image-1.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="flex-grow-1">
+                  <h6 class="nome_amici mb-1">Charlie Hookham</h6>
+                  <p class="testo_amici m-0">In Camera • Yumi Zouma</p>
+                  <p class="testo_amici m-0 mt-1">
+                    <i class="bi bi-music-note-beamed me-1"></i>EP III
+                  </p>
+                </div>
+
+                <div>
+                  <p class="testo_amici">4 ore</p>
+                </div>
+              </div>
+              <!---->
+              <div
+                class="card-side d-flex justify-content-between text-white-50 mt-3"
+              >
+                <div class="w-25">
+                  <img
+                    class="w-75 rounded-5"
+                    src="./Assets_esercizio/imgs/main/image-2.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="flex-grow-1">
+                  <h6 class="nome_amici mb-1">lightdark02</h6>
+                  <p class="testo_amici m-0">Aimed to Kill • Jade LeMac</p>
+                  <p class="testo_amici m-0 mt-1">
+                    <i class="bi bi-music-note-beamed me-1"></i>Aimed to Kill
+                  </p>
+                </div>
+                <div>
+                  <p class="testo_amici">8 ore</p>
+                </div>
+              </div>
+              <!---->
+              <div
+                class="card-side d-flex justify-content-between text-white-50 mt-3"
+              >
+                <div class="w-25">
+                  <img
+                    class="w-75 rounded-5"
+                    src="./Assets_esercizio/imgs/main/image-3.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="flex-grow-1">
+                  <h6 class="nome_amici mb-1">Valeria Traversob</h6>
+                  <p class="testo_amici m-0">New Kings • Sleeping Wolf</p>
+                  <p class="testo_amici m-0 mt-1">
+                    <i class="bi bi-vinyl me-1"></i>Twint Badass mood
+                  </p>
+                </div>
+
+                <div>
+                  <p class="testo_amici">3 giorni</p>
+                </div>
+              </div>
             </div>
           </div>
-
-          <div class="mt-3">
-            <div class="card-side d-flex justify-content-around text-white-50 ">
-              <div class="w-25">
-                <img class="w-75" src="./Assets_esercizio/imgs/main/image-1.jpg" alt="" />
-              </div>
-              <div>
-                <h6 class="nome_amici mb-1">Charlie Hookham</h6>
-                <p class="testo_amici m-0">In Camera • Yumi Zouma</p>
-                <p class="testo_amici m-0">EP III</p>
-              </div>
-
-              <div>
-                <p class="testo_amici">4 ore</p>
-              </div>
-            </div>
-            <!---->
-            <div class="card-side d-flex justify-content-around text-white-50 mt-3">
-              <div class="w-25">
-                <img class="w-75" src="./Assets_esercizio/imgs/main/image-2.jpg" alt="" />
-              </div>
-              <div>
-                <h6 class="nome_amici mb-1">lightdark02</h6>
-                <p class="testo_amici m-0">Aimed to Kill • Jade LeMac</p>
-                <p class="testo_amici m-0">Aimed to Kill</p>
-              </div>
-              <div>
-                <p class="testo_amici">8 ore</p>
-              </div>
-            </div>
-            <!---->
-            <div class="card-side d-flex justify-content-around text-white-50 mt-3">
-              <div class="w-25">
-                <img class="w-75" src="./Assets_esercizio/imgs/main/image-3.jpg" alt="" />
-              </div>
-              <div>
-                <h6 class="nome_amici mb-1">Valeria Traversob</h6>
-                <p class="testo_amici m-0">New Kings • Sleeping Wolf</p>
-                <p class="testo_amici m-0">Twint Badass mood</p>
-              </div>
-
-              <div>
-                <p class="testo_amici">3 giorni</p>
-              </div>
-            </div>
-
+        </aside>
+      </div>
+      <footer>
+        <nav class="d-flex navbar personal-border personal-bg z-1">
+          <div class="container-fluid">
+            <a class="navbar-brand text-light" href="#">Navbar</a>
           </div>
-        </div>
-      </aside>
+        </nav>
+      </footer>
     </div>
-  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
