--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </div>
         </aside>
       </div>
-      <footer>
+      <footer class="fixed-bottom">
         <nav class="d-flex navbar personal-border personal-bg z-1">
           <div class="container-fluid">
             <a class="navbar-brand text-light" href="#">Navbar</a>
