--- a/index.html
+++ b/index.html
@@ -113,7 +113,76 @@
             </div>
           </div>
         </nav>
-        <main class="col-7"></main>
+        <main class="col-7">
+          <!-- CAROSELLO CON CARDS -->
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div>
+              <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon bg-black" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                <span class="carousel-control-next-icon bg-black" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <div class="card mb-3 bg-secondary-subtle">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="./Assets_esercizio/imgs/main/image-1.jpg" class="img-fluid rounded-start" alt="imgCopertina">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+              </div>
+
+              <div class="carousel-item" data-bs-interval="2000">
+                <div class="card mb-3 bg-secondary-subtle">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="./Assets_esercizio/imgs/main/image-1.jpg" class="img-fluid rounded-start" alt="imgCopertina">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card mb-3 bg-secondary-subtle">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="./Assets_esercizio/imgs/main/image-1.jpg" class="img-fluid rounded-start" alt="imgCopertina">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <!-- SEZIONE BUONASERA -->
+          <section></section>
+          <!-- SEZIONE PLAYLIST -->
+          <section></section>
+        </main>
 
         <aside class="col-2 bg-black">
           <div id="side" class="mt-3">
@@ -202,14 +271,14 @@
           </div>
         </aside>
       </div>
-      <footer>
-        <nav class="d-flex navbar personal-border personal-bg z-1">
-          <div class="container-fluid">
-            <a class="navbar-brand text-light" href="#">Navbar</a>
-          </div>
-        </nav>
-      </footer>
     </div>
+    <footer class="fixed-bottom">
+      <nav class="d-flex navbar personal-border personal-bg z-1">
+        <div class="container-fluid">
+          <a class="navbar-brand text-light" href="#">Navbar</a>
+        </div>
+      </nav>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
