--- a/index.html
+++ b/index.html
@@ -276,6 +276,11 @@
             <div class="container-fluid">
               <h4 class="text-light">Buonasera</h4>
             </div>
+            <div class="container">
+              <div class="row" id="album-sera">
+
+              </div>
+            </div>
           </section>
           <!-- SEZIONE PLAYLIST -->
           <section></section>
@@ -382,5 +387,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
