--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
             <div class="container-fluid">
               <h4 class="text-light">Buonasera</h4>
             </div>
-            <div class="container">
-              <div class="row" id="album-sera">
+            <div class="container d-flex">
+              <div class="row justify-content-between" id="album-sera">
 
               </div>
             </div>
