--- a/index.html
+++ b/index.html
@@ -283,7 +283,14 @@
             </div>
           </section>
           <!-- SEZIONE PLAYLIST -->
-          <section></section>
+          <section>
+            <div class="container-fluid">
+              <h4 class="text-light">Altro di ciò che ti piace</h4>
+            </div>
+            <div class="container">
+              <div class="row" id="ads-artist">
+              </div>
+          </section>
         </main>
 
         <aside class="col-2 bg-black">
@@ -388,5 +395,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/script.js"></script>
+    <script src="./Assets/js/page.js"></script>
   </body>
 </html>
