--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
           </div>
         </nav>
-        <main class="col-7 mt-4">
+        <main class="col-12   col-md-7 mt-4">
           <!-- CAROSELLO CON CARDS -->
           <div
             id="carouselExampleInterval"
@@ -292,8 +292,8 @@
               </div>
           </section>
         </main>
-
-        <aside class="col-2 bg-black">
+<!----------Sidebar------------------------------------------------------------------------------>
+        <aside class="col d-none  col-md-2  d-md-block      bg-black">
           <div id="side" class="mt-3">
             <div
               class="d-flex justify-content-between align-items-center"
@@ -381,6 +381,7 @@
         </aside>
       </div>
     </div>
+    <!-------------------------------------------------Player---------------------------------------------------------------------->
     <footer class="fixed-bottom">
       <nav class="d-flex navbar personal-border personal-bg z-1">
         <div class="container-fluid">
