--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </div>
               <!--col-3------------------------------------------>
               <div class="col">
-                <div class="text-white-50 p-3">
+                <div class="text-white-50 p-3 playlist-sel">
                   <p>early stage emily syndrome (sett-ott 2022)</p>
                   <p>Be The Young</p>
                   <p>.." cit. Kimiko (lug-ago 2022)</p>
@@ -129,7 +129,7 @@
                   data-bs-slide="prev"
                 >
                   <span
-                    class="carousel-control-prev-icon bg-black rounded-5"
+                    class="carousel-control-prev-icon button-personal rounded-5"
                     aria-hidden="true"
                   ></span>
                   <span class="visually-hidden">Previous</span>
@@ -141,7 +141,7 @@
                   data-bs-slide="next"
                 >
                   <span
-                    class="carousel-control-next-icon bg-black rounded-5"
+                    class="carousel-control-next-icon button-personal rounded-5"
                     aria-hidden="true"
                   ></span>
                   <span class="visually-hidden">Next</span>
@@ -272,7 +272,7 @@
             </div>
           </div>
           <!-- SEZIONE BUONASERA -->
-          <section>
+          <section class="mb-4">
             <div class="container-fluid">
               <h4 class="text-light">Buonasera</h4>
             </div>
