--- a/album.html
+++ b/album.html
@@ -133,9 +133,11 @@
             </tr>
           </thead>
           <tbody id="songs-list">
+
           </tbody>
         </table>
        </div>
+        </main>
        <!----------main----------------------------------------------------------------------------->
 
     
@@ -243,7 +245,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/songlist.js"></script>
     <!-- <script src="./Assets/js/page.js"></script> -->
   </body>
 </html>
