--- a/album.html
+++ b/album.html
@@ -118,7 +118,18 @@
         
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row no-gutters" id="title_album">
-              
+              <div class="container mt-3">
+                <div class="row">
+                  <div class="col">
+                    <div class="d-flex justify-content-between">
+                      <div><i class=" fa-3x"></i></div>
+                      <div><i class=" fa-3x"></i></div>
+                      <div><i class="bi bi-arrow-down-circle fa-3x"></i></div>
+                      <div><i class="bi bi-three-dots fa-3x"></i></div>
+                    </div>
+                  </div>
+                </div>
+              </div>  
             </div>
           </div>  
        <!----------song list----------------------------------------------------------------------------->
