--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
                     </a>
                   </li>
 
-                  <li class="nav-item d-flex align-items-center">
+                  <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link active link-light fw-medium" href="#"
                       ><i class="bi bi-house-door-fill text-light me-1"></i>
                       Home
                     </a>
                   </li>
-                  <li class="nav-item d-flex align-items-center">
+                  <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#"
                       ><i class="bi bi-search text-white-50 me-1"></i> Cerca</a
                     >
                   </li>
-                  <li class="nav-item d-flex align-items-center">
+                  <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#">
                       <i class="bi bi-collection-play text-white-50 me-1"></i>
                       La tua libreria
@@ -60,21 +60,22 @@
               <!--col-2--------------------------------------------------->
               <div class="col">
                 <ul class="nav flex-column border-bottom border-dark">
-                  <li class="nav-item d-flex align-items-center">
+                  <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#"
                       ><i class="bi bi-plus-square-fill text-white-50 me-1"></i>
                       Crea Playlist
                     </a>
                   </li>
-                  <li class="nav-item d-flex align-items-center">
+                  <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#">
                       <i
-                        class="bi bi-suit-heart-fill text-white-50 text-center rounded-1 px-1 py-1 favourite-song-bg"
+                        class="bi bi-suit-heart-fill text-white-50 text-center rounded-1 px-1 py-1 favourite-song-bg me-1"
+                        
                       ></i>
                       Brani che ti piacciono
                     </a>
                   </li>
-                  <li class="nav-item d-flex align-items-center mb-3">
+                  <li class="nav-item d-flex align-items-center mb-3 personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#"
                       ><i
                         class="bi bi-bookmark-fill text-white-50 me-1 your-episode px-1 py-1"
@@ -185,7 +186,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <div class="card mb-3 bg-secondary-subtle">
+                <div class="card mb-3 bg-dark bg-gradient">
                   <div class="row g-0">
                     <div class="col-md-4">
                       <img
@@ -194,19 +195,21 @@
                         alt="imgCopertina"
                       />
                     </div>
-                    <div class="col-md-8">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                          This is a wider card with supporting text below as a
-                          natural lead-in to additional content. This content is
-                          a little bit longer.
+                    <div class="col-md-8 d-flex">
+                      <div class="card-body d-flex flex-column">
+                        <h1 class="card-title text-light fs-tile">CVLT</h1>
+                        <p class="card-text text-light">
+                        Salmo,Noyz Narcos  
                         </p>
                         <p class="card-text">
-                          <small class="text-body-secondary"
-                            >Last updated 3 mins ago</small
+                          <small class="text-light"
+                            >Ascolta il nuovo album di Salmo e Noyz Narcos</small
                           >
                         </p>
+                        <div>
+                        <button class="btn btn-success rounded-5">Play</button>
+                        <button class="btn btn-dark rounded-5">Salva</button>
+                      </div>
                       </div>
                     </div>
                   </div>
@@ -214,7 +217,7 @@
               </div>
 
               <div class="carousel-item" data-bs-interval="2000">
-                <div class="card mb-3 bg-secondary-subtle">
+                <div class="card mb-3 bg-dark bg-gradient">
                   <div class="row g-0">
                     <div class="col-md-4">
                       <img
@@ -225,24 +228,26 @@
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                          This is a wider card with supporting text below as a
-                          natural lead-in to additional content. This content is
-                          a little bit longer.
+                        <h1 class="card-title text-light fs-tile">CVLT</h1>
+                        <p class="card-text text-light">
+                        Salmo,Noyz Narcos  
                         </p>
                         <p class="card-text">
-                          <small class="text-body-secondary"
-                            >Last updated 3 mins ago</small
+                          <small class="text-light"
+                            >Ascolta il nuovo album di Salmo e Noyz Narcos</small
                           >
                         </p>
+                        <div>
+                        <button class="btn btn-success rounded-5">Play</button>
+                        <button class="btn btn-dark rounded-5">Salva</button>
                       </div>
                     </div>
                   </div>
                 </div>
+                </div>
               </div>
               <div class="carousel-item">
-                <div class="card mb-3 bg-secondary-subtle">
+                <div class="card mb-3 bg-dark bg-gradient">
                   <div class="row g-0">
                     <div class="col-md-4">
                       <img
@@ -253,20 +258,21 @@
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                          This is a wider card with supporting text below as a
-                          natural lead-in to additional content. This content is
-                          a little bit longer.
+                        <h1 class="card-title text-light fs-tile">CVLT</h1>
+                        <p class="card-text text-light">
+                        Salmo,Noyz Narcos  
                         </p>
                         <p class="card-text">
-                          <small class="text-body-secondary"
-                            >Last updated 3 mins ago</small
+                          <small class="text-light"
+                            >Ascolta il nuovo album di Salmo e Noyz Narcos</small
                           >
                         </p>
+                        <div>
+                        <button class="btn btn-success rounded-5">Play</button>
+                        <button class="btn btn-dark rounded-5">Salva</button>
                       </div>
                     </div>
-                  </div>
+                    </div>
                 </div>
               </div>
             </div>
