--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             </div>
           </section>
           <!-- SEZIONE PLAYLIST -->
-          <section>
+          <section class="mb-5">
             <div class="container-fluid">
               <h4 class="text-light">Altro di ciò che ti piace</h4>
             </div>
