--- a/artist.html
+++ b/artist.html
@@ -159,6 +159,21 @@
             <p class="" id="numero_ascoltatori"></p>
           </div>
         </div>
+        <div class="container">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Titolo</th>
+                <th>Riproduzioni</th>
+                <th>Durata</th>
+              </tr>
+            </thead>
+            <tbody id="songs-list">
+
+            </tbody>
+          </table>
+        </div>
       </main>
 
       <!----------Sidebar------------------------------------------------------------------------------>
