--- a/artist.html
+++ b/artist.html
@@ -161,7 +161,9 @@
         </div>
 
         <div>
-          
+          <button class="btn btn-trasparent p-0 ms-2"><i class="bi bi-play-circle-fill text-white fs-1"></i></button>
+          <button type="button" class="btn btn-outline-light py-1 mx-2">FOLLOWING</button>
+          <button class="btn btn-trasparent p-0"><i class="bi bi-three-dots text-white fs-4"></i></button>
         </div>
 
         <div class="container">
@@ -173,11 +175,11 @@
                 <thead>
                 </thead>
                 <tbody id="songs-list">
-
+                  
                 </tbody>
               </table>
             </div>
-            <div class="col-5">
+            <div class="col-12 col-xl-5">
               <!-- seconda colonna-->
               <h4 class="text-white">Brani che ti piacciono</h4>
               <div class="row">
