--- a/artist.html
+++ b/artist.html
@@ -108,10 +108,10 @@
         </div>
       </nav>
       <!----------main----------------------------------------------------------------------------->
-      <main class="col-12   col-md-7 mt-4">
-        <div id="sfondo_immagine">
+      <main class="col-12   col-md-7 p-0 m-0">
+        <div class="p-0" id="sfondo_immagine">
           <div class="d-flex justify-content-between">
-            <div>
+            <div class="ms-3">
               <button type="button" class="btn m-0 p-0 me-3" data-bs-target="#carouselExampleInterval"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon bg-black rounded-5" aria-hidden="true"></span>
@@ -123,7 +123,7 @@
               </button>
             </div>
 
-            <div>
+            <div >
               <div class="dropdown">
                 <button class="logouser dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <div class="logofigure">
@@ -153,10 +153,10 @@
               </div>
             </div>
           </div>
-          <div>
-            <p class="text-white-50"><i class="bi bi-patch-check-fill text-primary me-1"></i>Artista Verificato</p>
-            <h1 class="" id="nome_artista"></h1>
-            <p class="" id="numero_ascoltatori"></p>
+          <div class="ms-3">
+            <p class="text-white"><i class="bi bi-patch-check-fill text-primary me-1"></i>Artista Verificato</p>
+            <h1 class=" text-white" id="nome_artista"></h1>
+            <p class="text-white" id="numero_ascoltatori"></p>
           </div>
         </div>
 
@@ -167,19 +167,19 @@
         </div>
 
         <div class="container">
-          <div class="row">
-            <div class="col-7">
+          <div class="row mt-2">
+            <div class="col-7 mt-1">
               <!-- prima colonna-->
               <h4 class="text-white">Popolari</h4>
-              <table class="table">
+              <table class="table table-borderless">
                 <thead>
                 </thead>
                 <tbody id="songs-list">
-                  
+
                 </tbody>
               </table>
             </div>
-            <div class="col-12 col-xl-5">
+            <div class="col-12 col-xl-5 mt-1">
               <!-- seconda colonna-->
               <h4 class="text-white">Brani che ti piacciono</h4>
               <div class="row">
