--- a/index.html
+++ b/index.html
@@ -422,22 +422,23 @@
                 <i class="fas fa-step-forward"></i>
                 <i class="fas fa-undo-alt"></i>
             </div>
-            <div class="progress-container">
-                <span>0:49</span>
-                <div class="progress-bar">
-                    <div class="progress"></div>
+            <div class="progress-container" id="progress-container">
+                <span id="current-time">0:00</span>
+                <div class="progress-bar" id="progress-bar">
+                    <div class="progress" id="progress"></div>
                 </div>
-                <span>3:15</span>
+                <span id="duration">3:15</span>
             </div>
         </div>
         <div class="other-features">
             <i class="fas fa-list-ul"></i>
             <i class="fas fa-desktop"></i>
-            <div class="volume-bar">
+            <div class="volume-bar" id="volume-bar">
                 <i class="fas fa-volume-down"></i>
-                <div class="progress-bar">
-                    <div class="progress"></div>
+                <div class="progress-bar" id="volume-progress-bar">
+                    <div class="progress" id="volume-progress"></div>
                 </div>
+                <i class="fas fa-volume-up"></i>
             </div>
         </div>
     </div>
