--- a/album.html
+++ b/album.html
@@ -28,11 +28,7 @@
             <div class="sidebar-header">
               <ul class="nav flex-column">
                 <li class="nav-item"></li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <i class="fas fa-ellipsis-h"></i>
-                  </a>
-                </li>
+                
               </ul>
             </div>
             <!--Row interna nav------------------------------------>
@@ -298,8 +294,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/songlist.js"></script>
-    <!-- <script src="./Assets/js/page.js"></script> -->
-    <script src="/assets/js/songslist.js"></script>
+    <script src="./assets/js/album.js"></script>
   </body>
 </html>
