--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
       </nav>
       <main class="col-12   col-md-7 mt-4">
         <!-- CAROSELLO CON CARDS -->
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
           <div class="d-flex justify-content-between">
             <div>
               <button type="button" class="btn m-0 p-0 me-3" data-bs-target="#carouselExampleInterval"
@@ -246,7 +245,7 @@
               <h4 class="text-light">Altro di ciò che ti piace</h4>
             </div>
             <div class="container">
-              <div class="row row-cols-5" id="ads-artist">
+              <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5" id="ads-artist">
               </div>
           </section>
       </main>
