fixed functioning player

--- a/index.html
+++ b/index.html
@@ -324,13 +324,15 @@
       <div class="song-bar">
           <div class="song-infos">
               <div class="image-container">
-                  <img src="https://d2y6mqrpjbqoe6.cloudfront.net/image/upload/f_auto,q_auto/media/library-400/216_636967437355378335Your_Lie_Small_hq.jpg" alt="" />
+                  <img src="" alt="" id="musicImglink" />
               </div>
               <div class="song-description">
-                  <p class="title">
-                      Watashitachi wa Sou Yatte Ikite Iku Jinshu na no
+                  <p class="title" id="titolo">
+                      
                   </p>
-                  <p class="artist">Masaru Yokoyama</p>
+                  <p class="artist" id="artista">
+
+                  </p>
               </div>
           </div>
           <div class="icons">
@@ -347,11 +349,11 @@
               <i class="fas fa-undo-alt"></i>
           </div>
           <div class="progress-container" id="progress-container">
-              <span id="current-time">0:00</span>
+              <span id="current-time"></span>
               <div class="progress-bar" id="progress-bar">
                   <div class="progress" id="progress"></div>
               </div>
-              <span id="duration">3:15</span>
+              <span id="duration"></span>
           </div>
       </div>
       <div class="other-features">
