--- a/artist.html
+++ b/artist.html
@@ -346,6 +346,7 @@
         </aside>
       </div>
     </div>
+    <div></div>
 
     <!-------------------------------------------------Player---------------------------------------------------------------------->
     <footer class="fixed-bottom">
