--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               <h4 class="text-light">Altro di ciò che ti piace</h4>
             </div>
             <div class="container">
-              <div class="row row-cols-5" id="ads-artist">
+              <div class="row row-cols-2 row-cols-md-5" id="ads-artist">
               </div>
           </section>
       </main>
