--- a/artist.html
+++ b/artist.html
@@ -23,11 +23,12 @@
   <body class="personal-bg">
     <div class="container-fluid">
       <div class="row">
-        <nav class="col-3 d-none d-md-block sidebar bg-black xin">
+        <nav class="col-3 d-none d-md-block sidebar bg-black">
           <div class="sticky-bottom">
             <div class="sidebar-header">
               <ul class="nav flex-column">
                 <li class="nav-item"></li>
+  
               </ul>
             </div>
             <!--Row interna nav------------------------------------>
@@ -39,19 +40,18 @@
                       <i class="bi bi-three-dots"></i>
                     </a>
                   </li>
-
-                  <li class="nav-item d-flex align-items-center">
-                    <a class="nav-link active link-light fw-medium" href="#"
-                      ><i class="bi bi-house-door-fill text-light me-1"></i>
+  
+                  <li class="nav-item d-flex align-items-center personal-list">
+                    <a class="nav-link active text-white-50 fw-medium" href="./index.html"><i
+                        class="bi bi-house-door-fill text-white-50 me-1"></i>
                       Home
                     </a>
                   </li>
-                  <li class="nav-item d-flex align-items-center">
-                    <a class="nav-link text-white-50 fw-medium" href="#"
-                      ><i class="bi bi-search text-white-50 me-1"></i> Cerca</a
-                    >
+                  <li class="nav-item d-flex align-items-center personal-list">
+                    <a class="nav-link text-white-50 fw-medium" href="#"><i class="bi bi-search text-white-50 me-1"></i>
+                      Cerca</a>
                   </li>
-                  <li class="nav-item d-flex align-items-center">
+                  <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#">
                       <i class="bi bi-collection-play text-white-50 me-1"></i>
                       La tua libreria
@@ -62,25 +62,22 @@
               <!--col-2--------------------------------------------------->
               <div class="col">
                 <ul class="nav flex-column border-bottom border-dark">
-                  <li class="nav-item d-flex align-items-center">
-                    <a class="nav-link text-white-50 fw-medium" href="#"
-                      ><i class="bi bi-plus-square-fill text-white-50 me-1"></i>
+                  <li class="nav-item d-flex align-items-center personal-list">
+                    <a class="nav-link text-white-50 fw-medium" href="#"><i
+                        class="bi bi-plus-square-fill text-white-50 me-1"></i>
                       Crea Playlist
                     </a>
                   </li>
-                  <li class="nav-item d-flex align-items-center">
+                  <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#">
                       <i
-                        class="bi bi-suit-heart-fill text-white-50 text-center rounded-1 px-1 py-1 favourite-song-bg"
-                      ></i>
+                        class="bi bi-suit-heart-fill text-white-50 text-center rounded-1 px-1 py-1 favourite-song-bg me-1"></i>
                       Brani che ti piacciono
                     </a>
                   </li>
-                  <li class="nav-item d-flex align-items-center mb-3">
-                    <a class="nav-link text-white-50 fw-medium" href="#"
-                      ><i
-                        class="bi bi-bookmark-fill text-white-50 me-1 your-episode px-1 py-1"
-                      ></i>
+                  <li class="nav-item d-flex align-items-center mb-3 personal-list">
+                    <a class="nav-link text-white-50 fw-medium" href="#"><i
+                        class="bi bi-bookmark-fill text-white-50 me-1 your-episode px-1 py-1"></i>
                       I tuoi episodi
                     </a>
                   </li>
@@ -88,7 +85,7 @@
               </div>
               <!--col-3------------------------------------------>
               <div class="col">
-                <div class="text-white-50 p-3">
+                <div class="text-white-50 p-3 playlist-sel">
                   <p>early stage emily syndrome (sett-ott 2022)</p>
                   <p>Be The Young</p>
                   <p>.." cit. Kimiko (lug-ago 2022)</p>
@@ -115,7 +112,7 @@
             </div>
           </div>
         </nav>
-        <!----------main----------------------------------------------------------------------------->
+          <!----------main----------------------------------------------------------------------------->
 
         <main class="col-12 col-md-7 p-0 m-0 mb-5">
           <div
@@ -258,31 +255,22 @@
         </main>
 
         <!----------Sidebar------------------------------------------------------------------------------>
-        <aside class="col d-none col-md-2 d-md-block bg-black xin">
+        <aside class="col d-none col-md-2 d-md-block bg-black">
           <div id="side" class="mt-3">
-            <div
-              class="d-flex justify-content-between align-items-center"
-              id="friends"
-            >
+            <div class="d-flex justify-content-between align-items-center" id="friends">
               <div>
                 <h5 class="text-light mt-2">Attività amici</h5>
               </div>
               <div>
-                <i class="bi bi-person-add fs-5 text-white-50"></i>
-                <i class="bi bi-x fs-4 text-white-50"></i>
+                <i class="bi bi-person-add fs-5 text-white-50 icon-personal"></i>
+                <i class="bi bi-x fs-4 text-white-50 icon-personal"></i>
               </div>
             </div>
-
+  
             <div class="mt-3">
-              <div
-                class="card-side d-flex justify-content-between text-white-50"
-              >
+              <div class="card-side d-flex justify-content-between text-white-50 aside-personal">
                 <div class="w-25">
-                  <img
-                    class="w-75 rounded-5"
-                    src="./Assets_esercizio/imgs/main/image-1.jpg"
-                    alt=""
-                  />
+                  <img class="w-75 rounded-5" src="./Assets_esercizio/imgs/main/image-1.jpg" alt="" />
                 </div>
                 <div class="flex-grow-1">
                   <h6 class="nome_amici mb-1">Charlie Hookham</h6>
@@ -291,21 +279,15 @@
                     <i class="bi bi-music-note-beamed me-1"></i>EP III
                   </p>
                 </div>
-
+  
                 <div>
                   <p class="testo_amici">4 ore</p>
                 </div>
               </div>
               <!---->
-              <div
-                class="card-side d-flex justify-content-between text-white-50 mt-3"
-              >
+              <div class="card-side d-flex justify-content-between text-white-50 mt-3  aside-personal">
                 <div class="w-25">
-                  <img
-                    class="w-75 rounded-5"
-                    src="./Assets_esercizio/imgs/main/image-2.jpg"
-                    alt=""
-                  />
+                  <img class="w-75 rounded-5" src="./Assets_esercizio/imgs/main/image-2.jpg" alt="" />
                 </div>
                 <div class="flex-grow-1">
                   <h6 class="nome_amici mb-1">lightdark02</h6>
@@ -319,15 +301,9 @@
                 </div>
               </div>
               <!---->
-              <div
-                class="card-side d-flex justify-content-between text-white-50 mt-3"
-              >
+              <div class="card-side d-flex justify-content-between text-white-50 mt-3  aside-personal">
                 <div class="w-25">
-                  <img
-                    class="w-75 rounded-5"
-                    src="./Assets_esercizio/imgs/main/image-3.jpg"
-                    alt=""
-                  />
+                  <img class="w-75 rounded-5" src="./Assets_esercizio/imgs/main/image-3.jpg" alt="" />
                 </div>
                 <div class="flex-grow-1">
                   <h6 class="nome_amici mb-1">Valeria Traversob</h6>
@@ -336,7 +312,7 @@
                     <i class="bi bi-vinyl me-1"></i>Twint Badass mood
                   </p>
                 </div>
-
+  
                 <div>
                   <p class="testo_amici">3 giorni</p>
                 </div>
@@ -346,46 +322,44 @@
         </aside>
       </div>
     </div>
-    <div></div>
-
+      
     <!-------------------------------------------------Player---------------------------------------------------------------------->
     <footer class="fixed-bottom">
       <div class="music-player">
-        <div class="song-bar">
-          <div class="song-infos">
-            <div class="image-container">
-              <img
-                src="https://d2y6mqrpjbqoe6.cloudfront.net/image/upload/f_auto,q_auto/media/library-400/216_636967437355378335Your_Lie_Small_hq.jpg"
-                alt=""
-              />
+        <div class="song-bar d-none" id="musician">
+            <div class="song-infos">
+                <div class="image-container">
+                    <img src="" alt="" id="musicImglink" />
+                </div>
+                <div class="song-description">
+                    <p class="title" id="titolo">
+                        
+                    </p>
+                    <p class="artist" id="artista">
+  
+                    </p>
+                </div>
             </div>
-            <div class="song-description">
-              <p class="title">
-                Watashitachi wa Sou Yatte Ikite Iku Jinshu na no
-              </p>
-              <p class="artist">Masaru Yokoyama</p>
+            <div class="icons">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-compress"></i>
             </div>
-          </div>
-          <div class="icons">
-            <i class="far fa-heart"></i>
-            <i class="fas fa-compress"></i>
-          </div>
         </div>
         <div class="progress-controller">
-          <div class="control-buttons">
-            <i class="fas fa-random"></i>
-            <i class="fas fa-step-backward"></i>
-            <i class="play-pause fas fa-play"></i>
-            <i class="fas fa-step-forward"></i>
-            <i class="fas fa-undo-alt"></i>
-          </div>
-          <div class="progress-container" id="progress-container">
-            <span id="current-time">0:00</span>
-            <div class="progress-bar" id="progress-bar">
-              <div class="progress" id="progress"></div>
+            <div class="control-buttons">
+                <i class="fas fa-random"></i>
+                <i class="fas fa-step-backward"></i>
+                <i class="play-pause fas fa-play bg-success"></i>
+                <i class="fas fa-step-forward"></i>
+                <i class="fas fa-undo-alt"></i>
             </div>
-            <span id="duration">3:15</span>
-          </div>
+            <div class="progress-container" id="progress-container">
+                <span id="current-time">0:00</span>
+                <div class="progress-bar" id="progress-bar">
+                    <div class="progress" id="progress"></div>
+                </div>
+                <span id="duration">0:00</span>
+            </div>
         </div>
         <div class="other-features">
           <i class="fas fa-list-ul"></i>
@@ -400,7 +374,7 @@
         </div>
       </div>
     </footer>
-
+  
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
