--- a/artist.html
+++ b/artist.html
@@ -211,7 +211,7 @@
                 <i class="bi bi-patch-check-fill text-primary me-1"></i>Artista
                 Verificato
               </p>
-              <h1 class="text-white fs-tile" id="nome_artista"></h1>
+              <h1 class="text-white fs-title-due" id="nome_artista"></h1>
               <p class="text-white" id="numero_ascoltatori"></p>
             </div>
           </div>
