--- a/index.html
+++ b/index.html
@@ -41,11 +41,25 @@
                     Home
                   </a>
                 </li>
-                <li class="nav-item d-flex align-items-center personal-list">
-                  <a class="nav-link text-white-50 fw-medium" href="#"><i class="bi bi-search text-white-50 me-1"></i>
-                    Cerca</a>
+                <li class="nav-item d-flex align-items-center justify-content-between personal-list">
+                  <a
+                    class="nav-link text-white-50 fw-medium"
+                    data-bs-toggle="collapse"
+                    href="#collapseExample"
+                    role="button"
+                    aria-expanded="false"
+                    aria-controls="collapseExample"
+                    href="#"
+                    ><i class="bi bi-search text-white-50 me-1"></i> Cerca</a
+                  >
+                  <div class="collapse" id="collapseExample">
+                    <div class="d-flex justify-content-between">
+                      <input class="text-bg-dark rounded-5 border-0" id="inputSearch" type="search">
+                      <button for="inputSearch" class="btn btn-success rounded-5 personal-button" id="buttonSend" type="button" onclick="functionInput()">INVIA</button>
+                    </div>
+                  </div>
                 </li>
-                <li class="nav-item d-flex align-items-center personal-list">
+              <li class="nav-item d-flex align-items-center personal-list">
                   <a class="nav-link text-white-50 fw-medium" href="#">
                     <i class="bi bi-collection-play text-white-50 me-1"></i>
                     La tua libreria
