--- a/artist.html
+++ b/artist.html
@@ -28,7 +28,6 @@
             <div class="sidebar-header">
               <ul class="nav flex-column">
                 <li class="nav-item"></li>
-  
               </ul>
             </div>
             <!--Row interna nav------------------------------------>
@@ -40,16 +39,29 @@
                       <i class="bi bi-three-dots"></i>
                     </a>
                   </li>
-  
+
                   <li class="nav-item d-flex align-items-center personal-list">
-                    <a class="nav-link active text-white-50 fw-medium" href="./index.html"><i
-                        class="bi bi-house-door-fill text-white-50 me-1"></i>
+                    <a
+                      class="nav-link active text-white-50 fw-medium"
+                      href="./index.html"
+                      ><i class="bi bi-house-door-fill text-white-50 me-1"></i>
                       Home
                     </a>
                   </li>
                   <li class="nav-item d-flex align-items-center personal-list">
-                    <a class="nav-link text-white-50 fw-medium" href="#"><i class="bi bi-search text-white-50 me-1"></i>
-                      Cerca</a>
+                    <a
+                      class="nav-link text-white-50 fw-medium"
+                      data-bs-toggle="collapse"
+                      href="#collapseExample"
+                      role="button"
+                      aria-expanded="false"
+                      aria-controls="collapseExample"
+                      href="#"
+                      ><i class="bi bi-search text-white-50 me-1"></i> Cerca</a
+                    >
+                    <div class="collapse" id="collapseExample">
+                      <input type="text">
+                    </div>
                   </li>
                   <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#">
@@ -63,21 +75,26 @@
               <div class="col">
                 <ul class="nav flex-column border-bottom border-dark">
                   <li class="nav-item d-flex align-items-center personal-list">
-                    <a class="nav-link text-white-50 fw-medium" href="#"><i
-                        class="bi bi-plus-square-fill text-white-50 me-1"></i>
+                    <a class="nav-link text-white-50 fw-medium" href="#"
+                      ><i class="bi bi-plus-square-fill text-white-50 me-1"></i>
                       Crea Playlist
                     </a>
                   </li>
                   <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#">
                       <i
-                        class="bi bi-suit-heart-fill text-white-50 text-center rounded-1 px-1 py-1 favourite-song-bg me-1"></i>
+                        class="bi bi-suit-heart-fill text-white-50 text-center rounded-1 px-1 py-1 favourite-song-bg me-1"
+                      ></i>
                       Brani che ti piacciono
                     </a>
                   </li>
-                  <li class="nav-item d-flex align-items-center mb-3 personal-list">
-                    <a class="nav-link text-white-50 fw-medium" href="#"><i
-                        class="bi bi-bookmark-fill text-white-50 me-1 your-episode px-1 py-1"></i>
+                  <li
+                    class="nav-item d-flex align-items-center mb-3 personal-list"
+                  >
+                    <a class="nav-link text-white-50 fw-medium" href="#"
+                      ><i
+                        class="bi bi-bookmark-fill text-white-50 me-1 your-episode px-1 py-1"
+                      ></i>
                       I tuoi episodi
                     </a>
                   </li>
@@ -112,7 +129,7 @@
             </div>
           </div>
         </nav>
-          <!----------main----------------------------------------------------------------------------->
+        <!----------main----------------------------------------------------------------------------->
 
         <main class="col-12 col-md-7 p-0 m-0 mb-5">
           <div
@@ -257,20 +274,31 @@
         <!----------Sidebar------------------------------------------------------------------------------>
         <aside class="col d-none col-md-2 d-md-block bg-black">
           <div id="side" class="mt-3">
-            <div class="d-flex justify-content-between align-items-center" id="friends">
+            <div
+              class="d-flex justify-content-between align-items-center"
+              id="friends"
+            >
               <div>
                 <h5 class="text-light mt-2">Attività amici</h5>
               </div>
               <div>
-                <i class="bi bi-person-add fs-5 text-white-50 icon-personal"></i>
+                <i
+                  class="bi bi-person-add fs-5 text-white-50 icon-personal"
+                ></i>
                 <i class="bi bi-x fs-4 text-white-50 icon-personal"></i>
               </div>
             </div>
-  
+
             <div class="mt-3">
-              <div class="card-side d-flex justify-content-between text-white-50 aside-personal">
+              <div
+                class="card-side d-flex justify-content-between text-white-50 aside-personal"
+              >
                 <div class="w-25">
-                  <img class="w-75 rounded-5" src="./Assets_esercizio/imgs/main/image-1.jpg" alt="" />
+                  <img
+                    class="w-75 rounded-5"
+                    src="./Assets_esercizio/imgs/main/image-1.jpg"
+                    alt=""
+                  />
                 </div>
                 <div class="flex-grow-1">
                   <h6 class="nome_amici mb-1">Charlie Hookham</h6>
@@ -279,15 +307,21 @@
                     <i class="bi bi-music-note-beamed me-1"></i>EP III
                   </p>
                 </div>
-  
+
                 <div>
                   <p class="testo_amici">4 ore</p>
                 </div>
               </div>
               <!---->
-              <div class="card-side d-flex justify-content-between text-white-50 mt-3  aside-personal">
+              <div
+                class="card-side d-flex justify-content-between text-white-50 mt-3 aside-personal"
+              >
                 <div class="w-25">
-                  <img class="w-75 rounded-5" src="./Assets_esercizio/imgs/main/image-2.jpg" alt="" />
+                  <img
+                    class="w-75 rounded-5"
+                    src="./Assets_esercizio/imgs/main/image-2.jpg"
+                    alt=""
+                  />
                 </div>
                 <div class="flex-grow-1">
                   <h6 class="nome_amici mb-1">lightdark02</h6>
@@ -301,9 +335,15 @@
                 </div>
               </div>
               <!---->
-              <div class="card-side d-flex justify-content-between text-white-50 mt-3  aside-personal">
+              <div
+                class="card-side d-flex justify-content-between text-white-50 mt-3 aside-personal"
+              >
                 <div class="w-25">
-                  <img class="w-75 rounded-5" src="./Assets_esercizio/imgs/main/image-3.jpg" alt="" />
+                  <img
+                    class="w-75 rounded-5"
+                    src="./Assets_esercizio/imgs/main/image-3.jpg"
+                    alt=""
+                  />
                 </div>
                 <div class="flex-grow-1">
                   <h6 class="nome_amici mb-1">Valeria Traversob</h6>
@@ -312,7 +352,7 @@
                     <i class="bi bi-vinyl me-1"></i>Twint Badass mood
                   </p>
                 </div>
-  
+
                 <div>
                   <p class="testo_amici">3 giorni</p>
                 </div>
@@ -322,44 +362,40 @@
         </aside>
       </div>
     </div>
-      
+
     <!-------------------------------------------------Player---------------------------------------------------------------------->
     <footer class="fixed-bottom">
       <div class="music-player">
         <div class="song-bar d-none" id="musician">
-            <div class="song-infos">
-                <div class="image-container">
-                    <img src="" alt="" id="musicImglink" />
-                </div>
-                <div class="song-description">
-                    <p class="title" id="titolo">
-                        
-                    </p>
-                    <p class="artist" id="artista">
-  
-                    </p>
-                </div>
+          <div class="song-infos">
+            <div class="image-container">
+              <img src="" alt="" id="musicImglink" />
             </div>
-            <div class="icons">
-                <i class="far fa-heart"></i>
-                <i class="fas fa-compress"></i>
+            <div class="song-description">
+              <p class="title" id="titolo"></p>
+              <p class="artist" id="artista"></p>
             </div>
+          </div>
+          <div class="icons">
+            <i class="far fa-heart"></i>
+            <i class="fas fa-compress"></i>
+          </div>
         </div>
         <div class="progress-controller">
-            <div class="control-buttons">
-                <i class="fas fa-random"></i>
-                <i class="fas fa-step-backward"></i>
-                <i class="play-pause fas fa-play bg-success"></i>
-                <i class="fas fa-step-forward"></i>
-                <i class="fas fa-undo-alt"></i>
+          <div class="control-buttons">
+            <i class="fas fa-random"></i>
+            <i class="fas fa-step-backward"></i>
+            <i class="play-pause fas fa-play bg-success"></i>
+            <i class="fas fa-step-forward"></i>
+            <i class="fas fa-undo-alt"></i>
+          </div>
+          <div class="progress-container" id="progress-container">
+            <span id="current-time">0:00</span>
+            <div class="progress-bar" id="progress-bar">
+              <div class="progress" id="progress"></div>
             </div>
-            <div class="progress-container" id="progress-container">
-                <span id="current-time">0:00</span>
-                <div class="progress-bar" id="progress-bar">
-                    <div class="progress" id="progress"></div>
-                </div>
-                <span id="duration">0:00</span>
-            </div>
+            <span id="duration">0:00</span>
+          </div>
         </div>
         <div class="other-features">
           <i class="fas fa-list-ul"></i>
@@ -374,7 +410,7 @@
         </div>
       </div>
     </footer>
-  
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
