--- a/album.html
+++ b/album.html
@@ -150,7 +150,7 @@
                 <tr class="border-bottom border-secondary">
                   <th class="bg-transparent text-white-50">#</th>
                   <th class="bg-transparent text-white-50">Titolo</th>
-                  <th class="bg-transparent text-white-50">Riproduzioni</th>
+                  <th class="bg-transparent text-white-50 text-center">Riproduzioni</th>
                   <th class="bg-transparent text-white-50 text-end">
                     <i class="bi bi-clock"></i>
                   </th>
