footer e testo artista fix

--- a/artist.html
+++ b/artist.html
@@ -211,7 +211,7 @@
                 <i class="bi bi-patch-check-fill text-primary me-1"></i>Artista
                 Verificato
               </p>
-              <h1 class="text-white fs-title-due" id="nome_artista"></h1>
+              <h1 class="text-white fa-4x" id="nome_artista"></h1>
               <p class="text-white" id="numero_ascoltatori"></p>
             </div>
           </div>
@@ -266,22 +266,24 @@
                 <div class="col-12 col-md-4">
                   <!-- COLONNA SX -->
                   <ul class="list-unstyled mb-0 text-center py-4">
-                    <li class="mt-3">
-                      <a href="#" class="text-decoration-none text-white"
+                    <li class="mt-3 personal-list">
+                      <a
+                        href="index.html"
+                        class="text-decoration-none text-white"
                         >Home</a
                       >
                     </li>
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white-50"
                         >Chi siamo</a
                       >
                     </li>
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white-50"
                         >Opportunità di lavoro</a
                       >
                     </li>
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white-50"
                         >For the Record</a
                       >
@@ -291,22 +293,22 @@
                 <div class="col-12 col-md-4">
                   <!-- COLONNA SX -->
                   <ul class="list-unstyled mb-0 text-center py-4">
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white">
                         Community</a
                       >
                     </li>
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white-50"
                         >Per artisti</a
                       >
                     </li>
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white-50"
                         >Sviluppatori</a
                       >
                     </li>
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white-50"
                         >Pubblicità</a
                       >
@@ -316,22 +318,22 @@
                 <div class="col-12 col-md-4">
                   <!-- COLONNA SX -->
                   <ul class="list-unstyled mb-0 text-center py-4">
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white"
                         >Link utili</a
                       >
                     </li>
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white-50"
                         >Assistenza</a
                       >
                     </li>
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white-50"
                         >App per cellulare gratuita</a
                       >
                     </li>
-                    <li class="mt-3">
+                    <li class="mt-3 personal-list">
                       <a href="#" class="text-decoration-none text-white-50"
                         >FDiritti del consumatore</a
                       >
