--- a/album.html
+++ b/album.html
@@ -121,7 +121,7 @@
 
           <div class="d-flex align-items-center">
             <div>
-              <i class="bi bi-play-circle-fill fa-4x text-success ms-3 me-3"></i>
+              <i class="bi bi-play-circle-fill fa-4x text-success ms-3 me-3" id="playalbum"></i>
             </div>
             <div><i class="bi bi-suit-heart fa-2x text-white-50 me-3"></i></div>
             <div>
@@ -239,9 +239,9 @@
         <div class="progress-controller">
             <div class="control-buttons">
                 <i class="fas fa-random"></i>
-                <i class="fas fa-step-backward"></i>
+                <i class="fas fa-step-backward" id="backward"></i>
                 <i class="play-pause fas fa-play bg-success"></i>
-                <i class="fas fa-step-forward"></i>
+                <i class="fas fa-step-forward" id="forward"></i>
                 <i class="fas fa-undo-alt"></i>
             </div>
             <div class="progress-container" id="progress-container">
