--- a/artist.html
+++ b/artist.html
@@ -211,7 +211,7 @@
 
           <div class="mx-4 my-3">
             <button class="btn btn-trasparent p-0">
-              <i class="bi-play-circle-fill fa-4x text-success"></i>
+              <i class="bi-play-circle-fill fa-4x text-success" id="playalbum"></i>
             </button>
             <button type="button" class="btn btn-outline-light py-1 mx-4">
               FOLLOWING
@@ -348,9 +348,9 @@
         <div class="progress-controller">
             <div class="control-buttons">
                 <i class="fas fa-random"></i>
-                <i class="fas fa-step-backward"></i>
+                <i class="fas fa-step-backward" id="backward"></i>
                 <i class="play-pause fas fa-play bg-success"></i>
-                <i class="fas fa-step-forward"></i>
+                <i class="fas fa-step-forward" id="forward"></i>
                 <i class="fas fa-undo-alt"></i>
             </div>
             <div class="progress-container" id="progress-container">
