--- a/album.html
+++ b/album.html
@@ -48,10 +48,23 @@
                       Home
                     </a>
                   </li>
-                  <li class="nav-item d-flex align-items-center personal-list">
-                    <a class="nav-link text-white-50 fw-medium" href="#"
+                  <li class="nav-item d-flex align-items-center justify-content-between personal-list">
+                    <a
+                      class="nav-link text-white-50 fw-medium"
+                      data-bs-toggle="collapse"
+                      href="#collapseExample"
+                      role="button"
+                      aria-expanded="false"
+                      aria-controls="collapseExample"
+                      href="#"
                       ><i class="bi bi-search text-white-50 me-1"></i> Cerca</a
                     >
+                    <div class="collapse" id="collapseExample">
+                      <div class="d-flex justify-content-between">
+                        <input class="text-bg-dark rounded-5 border-0" id="inputSearch" type="search">
+                        <button for="inputSearch" class="btn btn-success rounded-5 personal-button" id="buttonSend" type="button" onclick="functionInput()">INVIA</button>
+                      </div>
+                    </div>
                   </li>
                   <li class="nav-item d-flex align-items-center personal-list">
                     <a class="nav-link text-white-50 fw-medium" href="#">
@@ -399,5 +412,6 @@
     ></script>
     <script src="./assets/js/album.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
+    <script src="./assets/js/cerca.js"></script>
   </body>
 </html>
