--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <path d="M13 10L8 4.206 3 10z" fill="#fff"></path>
                   </svg>
                 </div>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu bg-secondary  ">
                   <li><a class="dropdown-item" href="#">Account</a></li>
                   <li><a class="dropdown-item" href="#">Profilo</a></li>
                   <li>
